// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable root size-36"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      className="uui-input singleInput"
      onChange={[Function]}
      placeholder="Please select "
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled"
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#folding-arrow-18.svg"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`PickerInput should be rendered correctly 2`] = `
<div
  className="container uui-input-box -clickable root size-48"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <div
      className="container uui-button-box uui-enabled root tag-color size-42 root"
      href={null}
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#btn-cross-24.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="container uui-button-box uui-enabled root tag-color size-42 root"
      href={null}
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="uui-caption"
      >
        A1
      </div>
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#btn-cross-24.svg"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
      onClick={[Function]}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#btn-cross-24.svg"
        />
      </svg>
    </div>
    <div
      className="container uui-icon uui-enabled"
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#folding-arrow-24.svg"
        />
      </svg>
    </div>
  </div>
</div>
`;
